--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <link href="%PUBLIC_URL%/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 
-    <title>React App</title>
+    <title>Cristian Cisternas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -69,7 +69,7 @@
 
     <!-- Core theme JS-->
 
-    <script src="js/scripts.js"></script>
+    <script src="%PUBLIC_URL%/js/scripts.js"></script>
 
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <!-- * *                               SB Forms JS                               * *-->
