--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/favicon2.ico" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta
       name="viewport"
@@ -76,6 +76,6 @@
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <!--<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>-->
   </body>
 </html>
